--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,21 @@
+/*Asterisk to override defaults*/
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+/*Header*/
 header {
     background-color: lightcoral;
 }
 
+/*Main*/
 main {
     background-color: lightblue;
 }
 
+/*Footer*/
 footer {
     background-color: lightgreen;
 }
