--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,12 +25,16 @@ body {
     /*Generic Styles*/
     color: #3a3a3a;
     font-family: 'Varela Round', sans-serif;
-    
+
 }
 
 /*Header*/
 header {
     background-color: #39FF39;
+
+}
+
+h1 {
     font-family: 'Oswald', sans-serif;
     font-size: 32px;
 }
