--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,13 @@ body {
 header {
     background-color: #39FF39;
 
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+
+    box-shadow: 0 2px 2px #3a3a3a;
+
 }
 
 h1 {
