--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,10 @@ header {
 
     box-shadow: 0 2px 2px #3a3a3a;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
 }
 
 header a {
@@ -87,6 +91,20 @@ nav {
     box-shadow: 0 2px 2px #3a3a3a;
 
     display: none;
+    top: 100%;
+}
+
+/*Nav Toggle*/
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 /*Main*/
