Style: Social media icons colored to match rest of palette

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,21 @@ footer {
     background-color: #DAB52E;
 }
 
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #000;    
+}
+
 /*Media Query - 768px and above*/
 @media screen and (min-width: 768px) {
 
@@ -165,6 +180,8 @@ footer {
 
 /*Laptop + Desktops - 992px and above*/
 @media screen and (min-width: 992px) {
+
+    /*Header*/
     li:hover.inactive {
         outline: 10px solid #DAB52E;
         color: #DAB52E;
@@ -174,5 +191,10 @@ footer {
     li:hover.active {
         outline: 10px solid #FFF;
         z-index: 98;
+    }
+
+    /*Footer*/
+    #social-networks i:hover {
+        color: #FFF;
     }
 }
