--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,8 @@ main {
     flex: 1 0 auto;
 
     margin-top: 47px;
+
+
 }
 
 hr {
@@ -151,6 +153,44 @@ hr {
     margin-top: 5px;
     line-height: 2.5;
 
+    text-align: justify;
+
+}
+
+#opening-times {
+    border: 1px solid #000;
+
+    margin-top: 10px;
+}
+
+#times-head {
+    color: #000;
+
+    text-transform: uppercase;
+
+    margin-top: 5px;
+
+    text-align: center;
+}
+
+#times-ul {
+    color: #000;
+
+    letter-spacing: 1px;
+    word-spacing: 5px;
+
+
+
+    margin-top: 5px;
+    line-height: 2.5;
+
+    list-style-type: none;
+
+    text-align: center;
+}
+
+#map {
+    border: 1px solid #000;
 }
 
 /*Animals*/
@@ -215,6 +255,8 @@ footer {
     /*Main*/
     main {
         margin-top: 75px;
+
+
     }
 
     /*Home*/
@@ -244,16 +286,43 @@ footer {
     }
 
     /*Main*/
+    main {}
 
     /*Home*/
+    #main-home {
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+
+    #main-home>section {
+        flex: 50%;
+    }
+
     #general-info {
         width: 40%;
-        height: 500px;
+        height: 50%;
 
     }
 
     #general-text {
         font-size: 20px;
+    }
+
+    #opening-times {
+        height: 100%;
+
+
+    }
+
+    #times-ul {
+        font-size: 20px;
+    }
+
+    #map {
+        margin-top: -150px;
+
+        width: 50%;
     }
 
     /*Footer*/
