--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ hr {
     letter-spacing: 1px;
     word-spacing: 5px;
 
-
+    display: flex;
 
     margin-top: 5px;
     line-height: 2.5;
@@ -190,7 +190,24 @@ hr {
 }
 
 #map {
-    border: 1px solid #000;
+    border: 3px solid #005200;
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+
+    padding: 5rem;
+}
+
+#map-image {
+    border: 3px solid #005200;
+    border-radius: 5%;
+
+    width: 90%;
 }
 
 /*Animals*/
