Edit: fix error nav toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,19 @@ nav {
     font-size: 2rem;
 }
 
+/* Hiding class, making content visible only to screen readers but not visually */
+/* Source: https: //css-tricks.com/inclusively-hidden/ */
+
+.sr-only:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
 /*Main*/
 main {
     background-color: #A4E890;
