--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,8 +366,21 @@ hr {
     height: 100%;
 }
 
-#thankyou-div>h2 {
-    margin-bottom: 20px;
+#thankyou-text {
+    padding: 2rem;
+
+    text-align: center;
+}
+
+#thankyou-head {
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+}
+
+#thankyou-anchor {
+    display: flex;
+    justify-content: center;
 }
 
 /*404*/
@@ -543,6 +556,11 @@ footer {
         box-sizing: border-box;
         text-align: center;
         font-size: 200%;
+    }
+
+    /*Extra Pages*/
+    #thankyou-main {
+        font-size: 2rem;
     }
 
     /*Footer*/
