Style: Media query animal page sorted

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,14 +246,14 @@ main {
 .animal-heading {
     color: #005200;
 
-    font-size: 5rem;
+    font-size: 4rem;
 
     align-content: center;
     justify-content: center;
 }
 
 .animal-photo {
-    width: 40rem;
+    width: 100%;
 
     border: solid 3px #005200;
     border-radius: 5%;
@@ -261,18 +261,10 @@ main {
 
 .animal-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
     width: 100%;
-    padding: 0rem 5rem;
-}
-
-#monkey-content {
-    display: flex;
-    flex-direction: row-reverse;
-
-    width: 100%;
-    padding: 0rem 5rem;
+    padding: 0rem 1rem;
 }
 
 .animal-text {
@@ -282,7 +274,7 @@ main {
 
     word-spacing: 1rem;
 
-    padding: 5rem;
+    padding: 1rem;
 
     justify-content: center;
     align-items: center;
@@ -464,6 +456,25 @@ footer {
         font-size: 3rem;
     }
 
+    /*Animal*/
+    .animal-content {
+        padding: 0rem 5rem;
+    }
+
+    .animal-heading {
+        font-size: 4rem;
+    }
+
+    .animal-photo {
+        width: 100%;
+    }
+
+    .animal-text {
+        font-size: 2rem;
+
+        padding: 3rem;
+    }
+
     /*Gallery*/
     #gallery-photos {
         column-count: 2;
@@ -553,6 +564,26 @@ footer {
     }
 
     /*Animals*/
+    .animal-content {
+        flex-direction: column;
+
+        padding: 4rem 4rem;
+    }
+
+    .animal-heading {
+        font-size: 5rem;
+    }
+
+    .animal-photo {
+        width: 100%;
+    }
+
+    .animal-text {
+        font-size: 2rem;
+
+        padding: 3rem;
+    }
+
 
 
     /*Gallery*/
@@ -593,5 +624,26 @@ footer {
     #social-networks i:hover {
         /*white*/
         color: #005200;
+    }
+
+}
+
+/*Extra media query for animal content*/
+@media screen and (min-width: 1400px) {
+
+    /*Animal*/
+
+    .animal-content {
+        flex-direction: row;
+
+        padding: 4rem 4rem;
+    }
+
+    .animal-photo {
+        width: 50%;
+    }
+
+    #monkey-content {
+        flex-direction: row-reverse;
     }
 }
