Style: change margin gallery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,11 +294,9 @@ main {
 
     width: 100%;
 
-    margin: 0.1rem;
-
     border-radius: 5%;
 
-    margin: 1rem 0rem 1rem 0rem;
+    margin-top: 1rem;
 }
 
 /*Contact Us*/
