Style: removed margin bottom from pc size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -633,6 +633,10 @@ footer {
         column-count: 3;
     }
 
+    .topmargin-gallery {
+        margin-bottom: 1rem;
+    }
+
     /*Contact*/
     #contact-main {
         flex-direction: row;
