--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,6 +418,7 @@ footer {
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem;
+        top: -0.5rem;
     }
 
     #menu {
@@ -536,7 +537,11 @@ footer {
 
     /*Header*/
     #menu {
-        font-size: 2rem;
+        font-size: 1.5rem;
+    }
+
+    nav {
+        top: -0.3rem;
     }
 
     li:hover.inactive {
